integrated with full install doc